--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-pandas==2.0.3
-numpy==1.24.3
-scikit-learn==1.3.0
-nltk==3.8.1
-seaborn==0.12.2
-matplotlib==3.7.1
-xgboost==1.7.6
-wordcloud==1.9.2
-streamlit==1.25.0
-jupyter==1.0.0
+streamlit>=1.28.0
+pandas>=1.5.0
+numpy>=1.24.0
+scikit-learn>=1.3.0
+nltk>=3.8
+matplotlib>=3.7.0
+seaborn>=0.12.0
+xgboost>=1.7.0
+wordcloud>=1.9.0
+
